--- a/index.html
+++ b/index.html
@@ -367,7 +367,6 @@
                 </div>
                 <div class="footer-letter">
                     <h3 class="footer-letter-title">Подпишитесь на рассылку</h3>
-                    <div class="footer-letter-modal">
                         <form class="footer-form">
                             <input
                                 class="footer-modal-input"
@@ -376,13 +375,12 @@
                                 placeholder="E-mail"
                             />
                             <label for="user-email"></label>
+                            <div class="footer-button">
+                                <button class="footer-btn" type="submit">Подписаться<svg class="modal-soc-icon">
+                                    <use href="./images/iconsall1.svg#icon-telegram"></use>
+                                </svg></button>
+                            </div>
                         </form>
-                        <div class="footer-button">
-                            <button class="footer-btn" type="submit">Подписаться<svg class="modal-soc-icon">
-                                <use href="./images/iconsall1.svg#icon-telegram"></use>
-                            </svg></button>
-                        </div>
-                    </div>
                 </div>   
             </div>
         </div>
@@ -399,7 +397,7 @@
                 <div class="modal-person">
                     <label class="modal-lable" for="user-name">Имя</label>
                     <div class="modal-lable-name">
-                        <input type="text" name="user-name" class="modal-input">
+                        <input class="modal-input" id="user-name" type="text" name="user-name">
                         <svg class="icon-person" width="18" height="18">
                             <use href="./images/iconsall1.svg#icon-person"></use>
                         </svg>
@@ -408,7 +406,7 @@
                 <div class="modal-phone">
                     <label class="modal-lable" for="user-tel">Телефон</label>
                     <div class="modal-lable-phone">
-                        <input type="tel" name="user-tel" class="modal-input">
+                        <input class="modal-input" id="user-tel" type="tel" name="user-tel">
                         <svg class="icon-phone" width="18" height="18">
                             <use href="./images/iconsall1.svg#icon-phone"></use>
                         </svg>
@@ -417,7 +415,7 @@
                 <div class="modal-letter">
                     <label class="modal-lable" for="user-mail">Почта</label>
                     <div class="modal-lable-letter">
-                        <input type="email" name="user-mail" class="modal-input">
+                        <input class="modal-input" id="user-mail" type="email" name="user-mail">
                         <svg class="icon-letter" width="18" height="18">
                             <use href="./images/iconsall1.svg#icon-letter"></use>
                         </svg>
@@ -431,7 +429,7 @@
                     <label class="check-text">
                         <input class="user-check" type="checkbox" name="user-licence" value="user-licence">
                         <span class="span-icon"></span>
-                        <span class="span-text">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></span>
+                        <span class="span-text">Соглашаюсь с рассылкой и принимаю<a class="licence-link" href="">Условия договора</a></span>
                     </label>
                 </div>
                 <button class="modal-btn" type="submit">Отправить</button>
