goit-markup-hw-07
домашнє завдання №7
доопрацювання

--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 <body>
     <header class="header">
         <div class="conteiner">
-            <nav class="nav">
+            <nav class="main-nav">
                 <a href="./index.html" class="logo logo--header link">Web<span class="logo__dark">Studio</span> </a>
-                <ul class="nav__list list">
-                    <li class="nav__item"><a href="./index.html" class="nav__link nav__link--hover current link">Студия</a></li>
-                    <li class="nav__item"><a href="./portfolio.html" class="nav__link link">Портфолио</a></li>
-                    <li class="nav__item"><a href="" class="nav__link link">Контакты</a></li>
+                <ul class="main-nav__list list">
+                    <li class="main-nav__item"><a href="./index.html" class="main-nav__link main-nav__link--hover current link">Студия</a></li>
+                    <li class="main-nav__item"><a href="./portfolio.html" class="main-nav__link link">Портфолио</a></li>
+                    <li class="main-nav__item"><a href="" class="main-nav__link link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contact list">
-                <li class="contact__mail">  
-                    <a href="mailto:info@devstudio.com" class="contact__link contact__link--color link">
-                        <svg class="contact__icon-mail">
+            <ul class="contact__list list">
+                <li class="contact__item">  
+                    <a href="mailto:info@devstudio.com" class="contact__link link">
+                        <svg class="contact__icon contact__icon--mail">
                             <use href="./images/iconsall1.svg#icon-mail"></use>
                         </svg>info@devstudio.com
                     </a>
                 </li>
-                <li class="contact__tel">
-                    <a href="tel:+380961111111" class="contact__link contact__link--color link">
-                        <svg class="contact__icon-smartphone">
+                <li class="contact__item">
+                    <a href="tel:+380961111111" class="contact__link link">
+                        <svg class="contact__icon contact__icon--smartphone">
                             <use href="./images/iconsall1.svg#icon-smartphone"></use>
                         </svg>+38 096 111 11 11
                     </a>
@@ -53,83 +53,83 @@
         </section>
         <section class="section">
             <div class="conteiner">
-                <h2 class="title-novisual">Преимущества</h2>
+                <h2 class="visually-hidden">Преимущества</h2>
                 <ul class="benefits list">
                     <li class="benefits__item">
-                        <div class="group">
-                            <svg class="group__elem">
+                        <div class="benefits-wraper">
+                            <svg class="benefits-wraper__icon">
                                 <use href="./images/iconsall1.svg#icon-group-1"></use>
                             </svg>
                         </div>
-                        <h3 class="title-text title-text--benefits">Внимание к деталям</h3>
+                        <h3 class="benefits__title title-text">Внимание к деталям</h3>
                         <p class="benefits__text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li class="benefits__item">
-                        <div class="group">
-                            <svg class="group__elem">
+                        <div class="benefits-wraper">
+                            <svg class="benefits-wraper__icon">
                                 <use href="./images/iconsall1.svg#icon-group-2"></use>
                             </svg>
                         </div>
-                        <h3 class="title-text title-text--benefits">Пунктуальность</h3>
+                        <h3 class="benefits__title title-text">Пунктуальность</h3>
                         <p class="benefits__text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
                     </li>
                     <li class="benefits__item">
-                        <div class="group">
-                            <svg class="group__elem">
+                        <div class="benefits-wraper">
+                            <svg class="benefits-wraper__icon">
                                 <use href="./images/iconsall1.svg#icon-group-3"></use>
                             </svg>
                         </div>
-                        <h3 class="title-text title-text--benefits">Планирование</h3>
+                        <h3 class="benefits__title title-text">Планирование</h3>
                         <p class="benefits__text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li class="benefits__item">
-                        <div class="group">
-                            <svg class="group__elem">
+                        <div class="benefits-wraper">
+                            <svg class="benefits-wraper__icon">
                                 <use href="./images/iconsall1.svg#icon-group-4"></use>
                             </svg>
                         </div>
-                        <h3 class="title-text title-text--benefits">Современные технологии</h3>
+                        <h3 class="benefits__title title-text">Современные технологии</h3>
                         <p class="benefits__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="section section-top">
+        <section class="section about">
             <div class="conteiner">
-                <h2 class="title-section">Чем мы занимаемся</h2>
-                <ul class="about list">
+                <h2 class="section-title">Чем мы занимаемся</h2>
+                <ul class="about__list list">
                     <li class="about__item">
-                            <div class="about__card">    
+                            <div class="about__wraper">    
                                 <img class="about__img" src="./images/img1.jpg" alt="работает за компьютером" width="370">
-                                <p class="title-text title-text--about">Десктопные приложения</p>
+                                <p class="about__title title-text ">Десктопные приложения</p>
                             </div>
                     </li>
                     <li class="about__item">
-                            <div class="about__card">
+                            <div class="about__wraper">
                                 <img class="about__img" src="./images/img2.jpg" alt="работает за ноутбуком" width="370">    
-                                <p class="title-text title-text--about">Мобильные приложения</p>
+                                <p class="about__title title-text">Мобильные приложения</p>
                             </div>
                     </li>
                     <li class="about__item">
-                            <div class="about__card">    
+                            <div class="about__wraper">    
                                 <img class="about__img" src="./images/img3.jpg" alt="работает на планшете" width="370">
-                                <p class="title-text title-text--about">Дизайнерские решения</p>
+                                <p class="about__title title-text">Дизайнерские решения</p>
                             </div>
                     </li>
                 </ul>
             </div>
         </section>
-        <section class="section team-section">
+        <section class="section team">
             <div class="conteiner">
-                <h2 class="title-section">Наша команда</h2>
-                <ul class="team list">
+                <h2 class="section-title">Наша команда</h2>
+                <ul class="team__list list">
                     <li class="team__item">
                         <img class="team__img" src="./images/foto1.jpg" alt="Фото члена команды Игорь Демьяненко" width="270">
-                        <div class="team__people">
+                        <div class="team__wraper">
                             <h3 class="team__name">Игорь Демьяненко</h3>
                             <p class="team__position">Product Designer</p>
-                            <div>
-                                <ul class="person list">
+                            <div class="social">
+                                <ul class="person__list list">
                                     <li class="person__item">
                                         <a href="" class="person__link">
                                             <svg class="person__icon">
@@ -164,11 +164,11 @@
                     </li>
                     <li class="team__item">
                         <img class="team__img" src="./images/foto2.jpg" alt="Фото члена команды Ольга Репина" width="270">
-                        <div class="team__people">
+                        <div class="team__wraper">
                             <h3 class="team__name">Ольга Репина</h3>
                             <p class="team__position">Frontend Developer</p>
-                            <div>
-                                <ul class="person list">
+                            <div class="social">
+                                <ul class="person__list list">
                                     <li class="person__item">
                                         <a href="" class="person__link">
                                             <svg class="person__icon">
@@ -203,11 +203,11 @@
                     </li>
                     <li class="team__item">
                         <img class="team__img" src="./images/foto3.jpg" alt="Фото члена команды Николай Тарасов" width="270">
-                        <div class="team__people">
+                        <div class="team__wraper">
                             <h3 class="team__name">Николай Тарасов</h3>
                             <p class="team__position">Marketing</p>
-                            <div>
-                                <ul class="person list">
+                            <div class="social">
+                                <ul class="person__list list">
                                     <li class="person__item">
                                         <a href="" class="person__link">
                                             <svg class="person__icon">
@@ -242,11 +242,11 @@
                     </li>
                     <li class="team__item">
                         <img class="team__img" src="./images/foto4.jpg" alt="Фото члена команды Михаил Ермаков" width="270">
-                        <div class="team__people">
+                        <div class="team__wraper">
                             <h3 class="team__name">Михаил Ермаков</h3>
                             <p class="team__position">UI Designer</p>
-                            <div>
-                                <ul class="person list">
+                            <div class="social">
+                                <ul class="person__list list">
                                     <li class="person__item">
                                         <a href="" class="person__link">
                                             <svg class="person__icon">
@@ -282,39 +282,51 @@
                 </ul>
             </div>        
         </section>
-        <section class="section">
+        <section class="section clients">
             <div class="conteiner">
-                <h2 class="title-section">Постоянные клиенты</h2>
-                <ul class="clients list">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <ul class="clients__list list">
                     <li class="clients__item">
-                        <svg class="clients__icon">
-                            <use href="./images/iconsall1.svg#icon-client1"></use>
-                        </svg>
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon">
+                                <use href="./images/iconsall1.svg#icon-client1"></use>
+                            </svg>
+                        </a>                        
                     </li>
                     <li class="clients__item">
-                        <svg class="clients__icon">
-                            <use href="./images/iconsall1.svg#icon-client2"></use>
-                        </svg>
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon">
+                                <use href="./images/iconsall1.svg#icon-client2"></use>
+                            </svg>
+                        </a>                        
                     </li>
                     <li class="clients__item">
-                        <svg class="clients__icon">
-                            <use href="./images/iconsall1.svg#icon-client3"></use>
-                        </svg>
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon">
+                                <use href="./images/iconsall1.svg#icon-client3"></use>
+                            </svg>
+                        </a>                        
                     </li>
                     <li class="clients__item">
-                        <svg class="clients__icon">
-                            <use href="./images/iconsall1.svg#icon-client4"></use>
-                        </svg>
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon">
+                                <use href="./images/iconsall1.svg#icon-client4"></use>
+                            </svg>
+                        </a>                        
                     </li>
                     <li class="clients__item">
-                        <svg class="clients__icon">
-                            <use href="./images/iconsall1.svg#icon-client5"></use>
-                        </svg>
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon">
+                                <use href="./images/iconsall1.svg#icon-client5"></use>
+                            </svg>
+                        </a>                       
                     </li>
                     <li class="clients__item">
-                        <svg class="clients__icon">
-                            <use href="./images/iconsall1.svg#icon-client6"></use>
-                        </svg>
+                        <a class="clients__link link" href="">
+                            <svg class="clients__icon">
+                                <use href="./images/iconsall1.svg#icon-client6"></use>
+                            </svg>
+                        </a>                       
                     </li>
                 </ul>
             </div>        
@@ -333,51 +345,51 @@
                         </ul>
                     </address>
                 </div>
-                <div class="join">
-                    <h3 class="title-text title-text--join">присоединяйтесь</h3>
-                    <ul class="join__list list">
-                        <li class="join__item">
-                            <a href="" class="join__link">
-                                <svg class="join__icon">
+                <div class="footer-soc">
+                    <h3 class="footer-soc__title title-text">присоединяйтесь</h3>
+                    <ul class="footer-soc__list list">
+                        <li class="footer-soc__item">
+                            <a href="" class="footer-soc__link">
+                                <svg class="footer-soc__icon">
                                     <use href="./images/iconsall1.svg#icon-instagram-2"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="join__item">
-                            <a href="" class="join__link">
-                                <svg class="join__icon">
+                        <li class="footer-soc__item">
+                            <a href="" class="footer-soc__link">
+                                <svg class="footer-soc__icon">
                                     <use href="./images/iconsall1.svg#icon-twitter-1"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="join__item">
-                            <a href="" class="join__link">
-                                <svg class="join__icon">
+                        <li class="footer-soc__item">
+                            <a href="" class="footer-soc__link">
+                                <svg class="footer-soc__icon">
                                     <use href="./images/iconsall1.svg#icon-fecebook"></use>
                                 </svg>
                             </a>
                         </li>
-                        <li class="join__item">
-                            <a href="" class="join__link">
-                                <svg class="join__icon">
+                        <li class="footer-soc__item">
+                            <a href="" class="footer-soc__link">
+                                <svg class="footer-soc__icon">
                                     <use href="./images/iconsall1.svg#icon-linkedin-1"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
                 </div>
-                <div class="letter">
-                    <h3 class="title-text title-text--letter">Подпишитесь на рассылку</h3>
-                    <form class="letter__form">
+                <div class="footer-join">
+                    <h3 class="footer-join__title title-text">Подпишитесь на рассылку</h3>
+                    <form class="footer-join__form">
                         <input
-                            class="letter__modal-input"
+                            class="footer-join__input"
                             type="email"
                             name="user-email"
                             placeholder="E-mail"
                         />
                         <label for="user-email"></label>
-                        <div class="letter__button">
-                            <button class="letter__btn" type="submit">Подписаться<svg class="letter__icon">
+                        <div class="footer-join__button">
+                            <button class="footer-join__btn" type="submit">Подписаться<svg class="footer-join__icon">
                                 <use href="./images/iconsall1.svg#icon-telegram"></use>
                             </svg></button>
                         </div>
